--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -55,34 +55,4 @@ body {
 
 }
 
-
-
-.hero {
-  height:100vh;
-  background-image: url("../assets/banner1.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: relative;
-  &__content {
-    position: absolute;
-    bottom: 8%;
-    left: 13.5vw;
-    color: $text-color;
-  }
-  &__title {
-    color: $main-color;
-    font-size: 75px;
-    line-height: 4.8rem;
-    text-transform: uppercase;
-    font-weight: normal;
-    span {
-      display: block;
-      color: #ffffff;
-      font-size: 60px;
-      text-transform: initial;
-    }
-  }
-  .btn-outline-custom {
-    margin-top: 20px;
-  }
-}
+@import "./molecules/hero-banner";
