--- a/src/scss/molecules/_about.scss
+++ b/src/scss/molecules/_about.scss
@@ -1,6 +1,8 @@
 .about {
   height: 100vh;
   background-image: url("../assets/banner2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   position: relative;
   &:before {
     content: '';
@@ -11,6 +13,7 @@
     background-color: #111;
     opacity: .5;
     display: block;
+    position: absolute;
   }
   &__content {
     position: absolute;
@@ -25,5 +28,22 @@
       margin-bottom: 30px;
     }
 
+  }
+}
+
+@media(max-width: 575px) {
+  .about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__content {
+      position: static;
+      //margin-top: 130px;
+      font-size: 18px;
+      .section-title {
+        font-size: 40px;
+        margin-bottom: 10px;
+      }
+    }
   }
 }
