--- a/src/scss/molecules/_product-list.scss
+++ b/src/scss/molecules/_product-list.scss
@@ -21,6 +21,25 @@
   .btn-outline-custom {
     border-radius: 50px;
     text-transform: uppercase;
-    padding: 10px 20px;
+    padding: 5px 20px;
+  }
+}
+
+@media(max-width:991px) {
+  .product-list {
+    &__title {
+      font-size: 30px;
+    }
+  }
+}
+
+@media(max-width:767px) {
+  .product-list {
+    height: auto;
+    padding: 40px 0;
+
+    &__item {
+      margin: 30px 0;
+    }
   }
 }
