product-list + htaccess para producao

--- a/src/scss/molecules/_product-list.scss
+++ b/src/scss/molecules/_product-list.scss
@@ -19,6 +19,7 @@
     color: $main-color;
   }
   .btn-outline-custom {
+    margin-top: 30px;
     border-radius: 50px;
     text-transform: uppercase;
     padding: 5px 20px;
