--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,7 +38,17 @@ body {
   }
 }
 
-
+@keyframes loading {
+  0%{
+    transform:rotate(0);
+  }
+  50%{
+    transform:rotate(180deg);
+  }
+  100%{
+    transform:rotate(360deg);
+  }
+}
 
 //---------------
 
