--- a/src/scss/molecules/_contact.scss
+++ b/src/scss/molecules/_contact.scss
@@ -9,5 +9,52 @@
       text-transform: capitalize;
     }
   }
+
+  &__form {
+    position: relative;
+    
+    &.sending {
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: #0a0a0a82;
+        z-index: 3;
+      }
+      .loading {
+        position: absolute;
+        top: 40%;
+        left: 42%;
+        transform: translate(-50%, -50%);
+        animation-name: loading;
+        animation-duration: .8s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+        z-index: 6;
+      }
+    }
+
+    .required {
+      label {
+        color: red;
+        font-weight: bold;
+      }
+      input {
+        border-color: red;
+      }
+    }
+  }
   
+}
+
+@media(max-width:575px) {
+  .contact {
+    .section-title {
+      font-size: 30px;
+    }
+  }
 }
