--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -61,9 +61,7 @@ body {
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  
   padding: 5px 15px;
   position: fixed;
   width: 100vw;
@@ -71,7 +69,14 @@ body {
   left: 50%;
   z-index: 10;
   transform: translateX(-50%);
-  
+  width: 100%;
+  background-color: #00000096;
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
   &__logo {
     max-width: 80px;
     display: block;
