projeto com os textos finalizados

--- a/src/scss/molecules/_product-list.scss
+++ b/src/scss/molecules/_product-list.scss
@@ -18,6 +18,9 @@
     text-transform: capitalize;
     color: $main-color;
   }
+  &__subtitle {
+    min-height: 72px;
+  }
   .btn-outline-custom {
     margin-top: 30px;
     border-radius: 50px;
