--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,7 +57,7 @@ body {
   font-size: 75px;
   line-height: 4.8rem;
   text-transform: uppercase;
-  font-weight: normal;
+  //font-weight: normal;
 }
 
 .header {
@@ -70,7 +70,7 @@ body {
   z-index: 10;
   transform: translateX(-50%);
   width: 100%;
-  background-color: #00000096;
+  background-color: rgba(0,0,0,0.64);
 
   .container {
     display: flex;
@@ -106,7 +106,7 @@ body {
       max-width: 60px;
     }
     &__nav {
-      flex-basis: 50%;
+      flex-basis: 70%;
     }
   }
 }
