--- a/src/scss/molecules/_about.scss
+++ b/src/scss/molecules/_about.scss
@@ -36,6 +36,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-position: bottom;
     &__content {
       position: static;
       //margin-top: 130px;
