--- a/src/scss/molecules/_product-list.scss
+++ b/src/scss/molecules/_product-list.scss
@@ -4,6 +4,10 @@
   display: flex;
   align-items: center;
 
+  .row {
+    justify-content: center;
+  }
+
   &__item {
     padding: 0 20px;
     text-align: center;
