--- a/src/scss/molecules/_hero-banner.scss
+++ b/src/scss/molecules/_hero-banner.scss
@@ -1,6 +1,6 @@
 .hero {
   height:100vh;
-  background-image: url("../assets/banner1.jpg");
+  background-image: url("../assets/home.png");
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
