--- a/src/scss/molecules/_contact.scss
+++ b/src/scss/molecules/_contact.scss
@@ -58,3 +58,11 @@
     }
   }
 }
+
+@media(min-width: 768px) and (max-width:991px) {
+  .contact {
+    .section-title {
+      font-size: 40px;
+    }
+  }
+}
